deployments/arr/flaresolverr/deployment.yaml
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaresolverr
  template:
    metadata:
      labels:
        app: flaresolverr
    spec:
      containers:
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:v3.3.21@sha256:f104ee51e5124d83cf3be9b37480649355d223f7d8f9e453d0d5ef06c6e3b31b
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8191
          securityContext:
            readOnlyRootFilesystem: false
            runAsNonRoot: false
            runAsUser: 0
            runAsGroup: 0
          volumeMounts:
            - name: flaresolverr-config
              mountPath: /config
      volumes:
        - name: flaresolverr-config
          persistentVolumeClaim:
            claimName: flaresolverr-config
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr-service
  namespace: media
spec:
  ports:
    - port: 8191
      targetPort: 8191
  selector:
    app: flaresolverr
---
# IngressRoute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flaresolverr-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`flaresolverr.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: flaresolverr-service
          port: 8191
      middlewares:
        - name: media-headers
  tls:
    secretName: local-tigovanroy-space-production-tls
